--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -4,7 +4,7 @@ html {
 
 body {
   height: 100%;
-  display:grid;
+  display: grid;
   grid-template-rows: auto 1fr auto;
 }
 
@@ -45,6 +45,8 @@ body {
   transform: translate(0%, -50%);
 }
 
+    <div class="changePw-box">
+       
 @media only screen and (max-width: 400px) {
   .display-4 {
     font-size: 10vw;
@@ -69,6 +71,8 @@ body {
   background-color: orange !important;
   padding: 0;
   padding-left: 2rem;
+    <div class="changePw-box">
+       
   padding-right: 0.5rem;
   padding-top: 0.2rem;
   padding-bottom: 0.2rem;
@@ -110,7 +114,7 @@ body {
 
 ul {
   list-style-type: none;
-  margin: 0;
+  margin: 0;>
   padding: 0;
 }
 
@@ -126,33 +130,7 @@ ul {
 
 
 
-/* Martin's Übungen' */
-
-/* ==> css_selectors !!!
-=====> cssref/css_selectors
-
-==> background-size 
-
-==> flexbox guide
-
-
-
-
-
-.bar {
-	--> class ansprechen (mehrere Objeke ansprechen)
-}
-
-****************************************************************
-#baz {
-	--> id ansprechen (ist eindeutig pro HTML-Datei)
-}
-
-main {
-	--> main wird angesprochen
-}
-
-*/
+/* Martin */
 
 main.login_background {
 	background-image: url(../images/milkyway.jpg);
@@ -180,8 +158,15 @@ main.changePw_background {
 	align-items: center;
 }
 
+
+/*	width: min-content;
+	display: inline-flex;
+
+ */
+
 .changePw-box {
-	width: 1200px;
+	margin-top: 2rem;
+	width: 400px;
 	height: 400px;
 	background-color: rgb(255,255,255,0.5);
 	border-radius: 1em;
@@ -190,11 +175,33 @@ main.changePw_background {
 }
 
 
-/*
-.m-1 {
-  margin-left: ($spacer * .25) !important;
+
+
+
+
+
+.headlineAdminPage{
+	margin-left: 1rem;
+	margin-top: 1rem;
+	/*
+	position: absolute;
+	top: 5%;
+	transform: translateY(-30%); */
+	
 }
-*/
+
+
+
+.adminButton{
+	margin-left: 1rem;
+	margin-bottom: 1rem;	
+}
+
+
+
+
+
+
 
 .changePwButtonRight {
 	padding-right: 16px;
