--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -22,82 +22,74 @@
   <!-- Fragment: Header -->
   <header th:fragment="top">
     <nav class="navbar navbar-expand-md navbar-light bg-light">
-      <a class="navbar-brand" href="/"><i class="fa fa-home fa-fw" aria-hidden="true"></i> SkillHub</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav">
-
-          <li class="nav-item">
-            <a class="nav-link" href="/skills"><i class="fas fa-address-book"></i> Find Skills</a>
-          </li>
-
-          <li class="nav-item" sec:authorize="isAuthenticated()">
-            <a class="nav-link" href="/user/profile"> <i class="fas fa-user"></i> My Profile </a>
-          </li>
-
-        </ul>
-      </div>
-
-      <ul class="navbar navbar-expand-md navbar-light bg-light">
-        <li class="nav-item">
-          <a class="nav-link" sec:authorize="!isAuthenticated()"></a>
-          <a class="btn-outline-secondary btn-sm" th:href="@{/admin}" sec:authorize="hasRole('ROLE_ADMIN')">Admin</a>
-        </li>
-
-        <li class="nav-item">
-          <a class="btn-outline-secondary btn-sm" th:href="@{/login}" sec:authorize="!isAuthenticated()"><i class="fas fa-sign-in-alt"></i> Login /
-            Register</a>
-          <a class="btn btn-outline-secondary btn-sm" th:href="@{/logout}" sec:authorize="isAuthenticated()">
-            <span sec:authentication="name"></span>
-          </a>
-        </li>
-
-        <li>
-          <pic> <a th:href="@{'/user/profile'}">
-            <img class="avatar" sec:authorize="hasRole('ROLE_USER')"
-              th:src="@{'/avatar/image'} != null ? @{'/avatar/image'} : '/images/avatar.png'" alt=" ">
-          </a> </pic>
-        </li>
-      </ul>
-    </nav>
-  </header>
-
-
-  <!-- Fragment: Footer -->
-  <footer th:fragment="bottom">
-    <nav class="navbar navbar-expand-md navbar-light bg-light">
       <a class="navbar-brand" href="/">SkillHub</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav mr-auto">
 
-        <ul class="navbar-nav">
+          <li class="nav-item"><a class="nav-link" href="/"><i class="fas fa-home fa-fw" aria-hidden="true"></i>
+              Home </a></li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="#">Impressum</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Privacy</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact Us</a>
-          </li>
+          <li class="nav-item"><a class="nav-link" href="/skills"><i class="fas fa-address-book fa-fw"></i>
+              Find Skills</a></li>
+
+          <li class="nav-item" sec:authorize="hasRole('ROLE_USER')"><a class="nav-link" href="/user/profile"><i
+              class="fas fa-user fa-fw"></i> My Profile </a></li>
+
+          <li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')"><a class="nav-link" href="/admin"><i
+              class="fas fa-database fa-fw"></i> Administrate</a></li>
+
         </ul>
 
+        <a th:href="@{'/user/profile'}"> <img class="avatar" sec:authorize="hasRole('ROLE_USER')"
+          th:src="@{'/avatar/image'} != null ? @{'/avatar/image'} : '/images/avatar.png'" alt=" ">
+        </a> <a class="btn btn-outline-primary btn-sm" sec:authorize="!isAuthenticated()" href="/login">Login / Register</a>
+        <a class="btn btn-outline-primary btn-sm" sec:authorize="isAuthenticated()" href="/logout">Logout</a>
+
       </div>
-      <ul class="navbar navbar-expand-md navbar-light bg-light">
-        <li class="nav-item copyright">
-          <a class="nav-link" href="#"></a>
-          <a class="btn-outline-secondary btn-sm">Copyright &copy; 2020</a>
-        </li>
-      </ul>
 
     </nav>
+  </header>
+
+  <!-- Fragment: Footer -->
+  <footer class="footer static-bottom" th:fragment="bottom">
+    <div class="container">
+      <div class="row text-left">
+        <div class="col-xs-12 col-sm-4 col-md-4">
+          <ul class="list-unstyled quick-links">
+            <li><a href="/"><i class="fa fa-angle-double-right"></i> Impressum</a></li>
+            <li><a href="/"><i class="fa fa-angle-double-right"></i> Privacy</a></li>
+            <li><a href="/"><i class="fa fa-angle-double-right"></i> Contact Us</a></li>
+          </ul>
+        </div>
+        <div class="col-xs-12 col-sm-4 col-md-4"></div>
+        <div class="col-xs-12 col-sm-4 col-md-4"></div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-5">
+          <ul class="list-unstyled list-inline social text-center">
+            <li class="list-inline-item"><a href="/"><i class="fab fa-facebook"></i></a></li>
+            <li class="list-inline-item"><a href="/"><i class="fab fa-twitter"></i></a></li>
+            <li class="list-inline-item"><a href="/"><i class="fab fa-instagram"></i></a></li>
+            <li class="list-inline-item"><a href="/"><i class="fab fa-google-plus"></i></a></li>
+            <li class="list-inline-item"><a href="/" target="_blank"><i class="fa fa-envelope"></i></a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-2 text-center">
+          <p>
+            <a href="/">SkillHub</a> Inc.
+          </p>
+          <p class="h6">
+            &copy All right Reversed.<a class="ml-2" href="https://www.telekom.com" target="_blank">Telekom AG</a>
+          </p>
+        </div>
+      </div>
+    </div>
   </footer>
 
 </body>
