--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -8,78 +8,56 @@
 
   <header th:replace="fragments.html :: top">Here goes the header</header>
 
-  <section>
-    <div class="flex-container">
-      <div class="container cards">
-        <div class="row no-gutters">
+  <main>
 
-          <div class="card w-75">
-            <div class="card-header">
+    <div class="container">
 
-              <div class="row">
-                <div class="col">
-                  <h3 th:text="${userForm.id} ? 'Edit your profile' : 'Create your profile'">User3</h3>
+      <form enctype="multipart/form-data" method="post" th:action="@{/user/upsert}" th:object="${userForm}">
+        <div class="row">
+          <div class="col col-12 col-lg-8 offset-lg-2">
+            <div class="card">
+              <div class="card-header">
+                <div class="row">
+                  <div class="col">
+                    <h3>Your Profile</h3>
+                  </div>
+                  <a class="btn btn-outline-primary" href="/changePw">Change Password</a>
                 </div>
-
-                <div class="changePwButtonRight">
-
-                  <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                      <a class="btn btn-success" th:href="@{/changePw}">Change Password</a>
-                    </li>
-                  </ul>
-
-                </div>
-
               </div>
+              <div class="card-body">
 
-              <!-- Card-Header  ============================================================ End-->
-
-
-              <!-- Card-Body  ============================================================== -->
-            </div>
-            <div class="card-body">
-
-
-              <form enctype="multipart/form-data" method="post" th:action="@{/user/upsert}" th:object="${userForm}">
                 <input name="id" th:field="*{id}" type="hidden">
-                <!--<input name="age" th:field="*{age}" type="hidden">-->
 
                 <div class="form-group">
-                  <label for="user-first-name">First name</label>
-                  <input type="text" class="form-control" id="firstName" name="firstName" placeholder="Stephanie"
-                    required th:field="*{firstName}">
+                  <label for="user-first-name">First name</label><input type="text" class="form-control" id="firstName"
+                    name="firstName" placeholder="Stephanie" required th:field="*{firstName}">
                 </div>
 
                 <div class="form-group">
-                  <label for="user-last-name">Last name</label>
-                  <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Bauer"
-                    th:field="*{lastName}">
+                  <label for="user-last-name">Last name</label> <input type="text" class="form-control" id="lastName"
+                    name="lastName" placeholder="Bauer" th:field="*{lastName}">
                 </div>
 
                 <div class="form-group">
-                  <label for="zip-code">Zip code</label>
-                  <input type="text" class="form-control" id="zip-code" name="zipName" placeholder="90427"
-                    th:field="*{zipCode}">
+                  <label for="zip-code">Zip code</label> <input type="text" class="form-control" id="zip-code"
+                    name="zipName" placeholder="90427" th:field="*{zipCode}">
                 </div>
 
                 <div class="form-group">
-                  <label for="City">City</label>
-                  <input type="text" class="form-control" id="city" name="city" placeholder="Nürnberg" required
-                    th:field="*{city}">
+                  <label for="City">City</label> <input type="text" class="form-control" id="city" name="city"
+                    placeholder="Nürnberg" required th:field="*{city}">
                 </div>
 
                 <div class="form-group">
-                  <label for="dateOfBirth">Birthday</label>
-                  <input type="date" class="form-control" id="dateOfBirth" name="dateOfBirth" placeholder="1995-06-21"
-                    required th:field="*{dateOfBirth}">
+                  <label for="dateOfBirth">Birthday</label> <input type="date" class="form-control" id="dateOfBirth"
+                    name="dateOfBirth" placeholder="1995-06-21" required th:field="*{dateOfBirth}">
                 </div>
 
                 <div class="form-group">
-                  <label for="email">Email address</label>
-                  <input type="email" class="form-control" id="email" aria-describedby="emailHelp" name="email"
-                    placeholder="stephanie.bauer@telekom.de" required th:field="*{email}">
-                  <small class="form-text text-muted">We'll never share your email with anyone else.</small>
+                  <label for="email">Email address</label> <input type="email" class="form-control" id="email"
+                    aria-describedby="emailHelp" name="email" placeholder="stephanie.bauer@telekom.de" required
+                    th:field="*{email}"> <small class="form-text text-muted">We'll never share your
+                    email with anyone else.</small>
                 </div>
 
                 <div class="form-group">
@@ -88,13 +66,6 @@
                     placeholder="Please enter your description here." th:field="*{description}" rows="3"></textarea>
                 </div>
 
-                <!--<div class="form-group">
-									<label for="imageURL">Upload your Photo</label> <input
-										type="text" class="form-control-file" id="imageURL"
-										name="imageURL" th:field="*{imageURL}">
-								</div> -->
-
-
                 <div class="form-group">
                   <label for="image">Upload your photo</label>
                   <div class="col-sm-10">
@@ -102,40 +73,57 @@
                   </div>
                   <span th:if="${#fields.hasErrors('*{image}')}" th:errors="*{image}">Image error</span>
                 </div>
+              </div>
+            </div>
+          </div>
+        </div>
 
-
+        <div class="row">
+          <div class="col col-12 col-lg-8 offset-lg-2">
+            <div class="card">
+              <div class="card-header">
+                <div class="row">
+                  <div class="col">
+                    <h3>Your Skills</h3>
+                  </div>
+                  <a class="btn btn-outline-primary" href="/changePw">Change Password</a>
+                </div>
+              </div>
+              <div class="card-body">
 
                 <ul>
                   <li th:each="userSkillLevel, stat : *{userSkillLevels}">
                     <div class="custom-control custom-switch">
-                      <input type="hidden" th:field="*{userSkillLevels[__${stat.index}__].id}" />
-                      <input class="custom-control-input" type="checkbox" th:id="${'toggle' + userSkillLevel.id}"
-                        th:field="*{userSkillLevels[__${stat.index}__].checked}" />
-                      <label class="custom-control-label" th:for="${'toggle' + userSkillLevel.id}"
-                        th:text="${userSkillLevel.name}">Climbing </label>
+                      <input type="hidden" th:field="*{userSkillLevels[__${stat.index}__].id}" /> <input
+                        class="custom-control-input" type="checkbox" th:id="${'toggle' + userSkillLevel.id}"
+                        th:field="*{userSkillLevels[__${stat.index}__].checked}" /> <label class="custom-control-label"
+                        th:for="${'toggle' + userSkillLevel.id}" th:text="${userSkillLevel.name}">Climbing </label>
                     </div>
                   </li>
                 </ul>
 
-                <button type="submit" value="Submit" class="btn btn-primary edit">Submit</button>
-              </form>
+                <button type="submit" value="Submit" class="btn btn-primary edit">Save Profile</button>
 
-              <form th:if="${userForm.id != null}" method="get" th:action="@{/user/delete}" th:object="${userForm}">
-                <input name="id" th:field="*{id}" type="hidden">
 
-                <button type="submit" value="Submit" class="btn btn-danger"><i class="fas fa-trash-alt"></i> Permanently delete my Account</button>
-              </form>
+                <!--               <form th:if="${userForm.id != null}" method="get" th:action="@{/user/delete}" th:object="${userForm}"> -->
+                <!--                 <input name="id" th:field="*{id}" type="hidden"> -->
+
+                <!--                 <button type="submit" value="Submit" class="btn btn-danger"> -->
+                <!--                   <i class="fas fa-trash-alt"></i> Permanently delete my Account -->
+                <!--                 </button> -->
+                <!--               </form> -->
+              </div>
             </div>
           </div>
         </div>
-      </div>
-    </div>
-  </section>
+        
+      </form>
 
+    </div>
+    
+  </main>
 
   <footer th:replace="fragments.html :: bottom">Here goes the footer</footer>
-
-
 
 </body>
 
