--- a/src/main/resources/templates/users/get_by_skill.html
+++ b/src/main/resources/templates/users/get_by_skill.html
@@ -9,105 +9,98 @@
   <header th:replace="fragments.html :: top">Here goes the header</header>
 
   <main>
-    <!--Jumbotron-->
-    <div class="jumbotron">
-      <img class="img" th:src="@{${'../images/' + skill.imageURL}}" alt="alt">
-      <div class="box">
-        <h1 class="display-4" style="color: black" th:text="|${skill.name} Skill|">Climbing Skills</h1>
-        <p class="lead" style="color: black">Find people who teach you their skill! Let's get in contact!</p>
-      </div>
-    </div>
+  
+    <!--     Jumbotron -->
+    <!--     <div class="jumbotron"> -->
+    <!--       <img class="img" th:src="@{${'../images/' + skill.imageURL}}" alt="alt"> -->
+    <!--       <div class="box"> -->
+    <!--         <h1 class="display-4" style="color: black" th:text="|${skill.name} Skill|">Climbing Skills</h1> -->
+    <!--         <p class="lead" style="color: black">Find people who teach you their skill! Let's get in contact!</p> -->
+    <!--       </div> -->
+    <!--     </div> -->
 
+    <div class="flex-container">
+      <div class="container cards">
+        <div class="row no-gutters">
+          <div class="col">
 
+            <div th:each="user : ${users}" class="card w-75">
+              <div class="card-header">
+                <i class="fas fa-user"></i> User Profile
+              </div>
+              <div class="card-body">
+                <blockquote class="blockquote mb-0">
 
-    <!--Cards-->
-    <section>
-      <div class="flex-container">
-        <div class="container cards">
-          <div class="row no-gutters">
-            <div class="col">
+                  <div class="card mb-3">
+                    <div class="row no-gutters">
+                      <div class="col-md-4">
 
-              <div th:each="user : ${users}" class="card w-75">
-                <div class="card-header"><i class="fas fa-user"></i> User Profile</div>
-                <div class="card-body">
-                  <blockquote class="blockquote mb-0">
+                        <img class="img-view" th:unless="${user.image}" src="../images/avatar.png" height="150"
+                          width="150"> <img class="img-view" th:if="${user.image}"
+                          th:src="@{'/user/' + ${user.id} + '/image'}" height="150" width="150">
 
-                    <div class="card mb-3">
-                      <div class="row no-gutters">
-                        <div class="col-md-4">
+                      </div>
+                      <div class="col-md-8">
+                        <div class="card-body">
+                          <p class="card-text">
+                          <div class="flex-container">
 
-                          <img class="img-view" th:unless="${user.image}" src="../images/avatar.png" height="150"
-                            width="150">
-                          <img class="img-view" th:if="${user.image}" th:src="@{'/user/' + ${user.id} + '/image'}"
-                            height="150" width="150">
-
-                        </div>
-                        <div class="col-md-8">
-                          <div class="card-body">
-                            <p class="card-text">
-                            <div class="flex-container">
-
-                              <div class="row no-gutters">
-                                <div class="col-4">
-                                  <p class="bold">Firstname:</p>
-                                </div>
-                                <div class="col-1">
-                                  <p></p>
-                                </div>
-                                <div class="col-6">
-                                  <p th:text="|${user.firstName}|"></p>
-                                </div>
+                            <div class="row no-gutters">
+                              <div class="col-4">
+                                <p class="bold">Firstname:</p>
                               </div>
-
-                              <div class="row no-gutters">
-                                <div class="col-4">
-                                  <p class="bold">Age:</p>
-                                </div>
-                                <div class="col-1">
-                                  <p></p>
-                                </div>
-                                <div class="col-6">
-                                  <p th:text="|${user.age}|"></p>
-                                </div>
+                              <div class="col-1">
+                                <p></p>
                               </div>
-
-                              <div class="row no-gutters">
-                                <div class="col-4">
-                                  <p class="bold">City:</p>
-                                </div>
-                                <div class="col-1">
-                                  <p></p>
-                                </div>
-                                <div class="col-6">
-                                  <p th:text="|${user.city}|"></p>
-                                </div>
+                              <div class="col-6">
+                                <p th:text="|${user.firstName}|"></p>
                               </div>
-
                             </div>
+
+                            <div class="row no-gutters">
+                              <div class="col-4">
+                                <p class="bold">Age:</p>
+                              </div>
+                              <div class="col-1">
+                                <p></p>
+                              </div>
+                              <div class="col-6">
+                                <p th:text="|${user.age}|"></p>
+                              </div>
+                            </div>
+
+                            <div class="row no-gutters">
+                              <div class="col-4">
+                                <p class="bold">City:</p>
+                              </div>
+                              <div class="col-1">
+                                <p></p>
+                              </div>
+                              <div class="col-6">
+                                <p th:text="|${user.city}|"></p>
+                              </div>
+                            </div>
+
                           </div>
                         </div>
                       </div>
-
                     </div>
-                  </blockquote>
 
-                  <a th:href="@{${'/user/view?id=' + user.id}}" class="btn btn-primary"><i class="far fa-address-card"></i> See profile</a>
-                </div>
+                  </div>
+                </blockquote>
 
+                <a th:href="@{${'/user/view?id=' + user.id}}" class="btn btn-primary"><i class="far fa-address-card"></i>
+                  See profile</a>
               </div>
             </div>
           </div>
-
         </div>
       </div>
-    </section>
-
+    </div>
 
   </main>
 
-
   <footer th:replace="fragments.html :: bottom">Here goes the footer</footer>
-
 
 </body>
 
