--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,238 +1,240 @@
-html {
-	height: 100%;
+/* Spacing between ">>" icon and footer items in the footer */
+#footer ul.quick-links li a i {
+	margin-right: 5px;
 }
 
+/* Sticky Footer */
 body {
-	height: 100%;
-	display: grid;
-	grid-template-rows: auto 1fr auto;
-}
-
-.img {
-	opacity: 0.5;
-	position: relative;
-	width: 100%;
-	object-fit: cover;
-}
-
-.img-view {
-	margin-top: 2rem;
-	margin-left: 2rem;
-	margin-bottom: 2rem;
-	background-image: url(../images/avatar.png);
-	background-size: cover;
-	display: inline-block;
-}
-
-.bold {
-	font-weight: bold;
-}
-
-.avatar {
-	border-radius: 50%;
-}
-
-.jumbotron {
-	position: relative;
-	max-height: 350px;
-	overflow: hidden;
-	padding: 0;
-}
-
-.box {
-	position: absolute;
-	top: 50%;
-	transform: translate(0%, -50%);
-}
-
-@media only screen and (max-width: 400px) {
-	.display-4 {
-		font-size: 10vw;
-	}
-	.lead {
-		font-size: 5vw;
-	}
-}
-
-.display-4, .lead {
-	padding-left: 20px;
-}
-
-/* Settings für Navbar und Footer*/
-.navbar li {
-	list-style-type: none;
-	padding-left: 5vw;
-}
-
-.bg-light {
-	background-color: orange !important;
-	padding: 0;
-	padding-left: 2rem;
-	padding-right: 0.5rem;
-	padding-top: 0.2rem;
-	padding-bottom: 0.2rem;
-}
-
-.copyright {
-	margin-bottom: 1rem;
-}
-
-.card {
-	margin: 2rem;
-}
-
-.container-edit {
-	margin: 2rem;
-	margin-left: 2rem;
-}
-
-/* Settings für Buttons*/
-.btn-danger {
-	margin-top: 2rem;
-}
-
-.btn-block {
-	display: block;
-	width: 100%;
-}
-
-.backbutton {
-	margin-top: 2rem;
-}
-
-.edit {
-	margin-top: 2rem;
-}
-
-ul {
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
-}
-
-.card-title {
-	font-size: 36px;
-}
-
-.flex-container {
-	display: block;
-	align-items: center;
-	justify-content: center;
-}
-
-/* Martin's Übungen' */
-
-/* ==> css_selectors !!!
-=====> cssref/css_selectors
-
-==> background-size 
-
-==> flexbox guide
-
-
-
-
-
-.bar {
-	--> class ansprechen (mehrere Objeke ansprechen)
-}
-
-****************************************************************
-#baz {
-	--> id ansprechen (ist eindeutig pro HTML-Datei)
+	display: flex;
+	min-height: 100vh;
+	flex-direction: column;
 }
 
 main {
-	--> main wird angesprochen
+	flex: 1;
 }
 
-*/
-main.login_background {
-	background-image: url(../images/milkyway.jpg);
-	background-size: cover;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+/* Border for forms */
+hr.solid {
+	border-top: 1px solid #ced4da;
 }
 
-.login-box {
-	width: 800px;
-	height: 300px;
-	background-color: rgb(255, 255, 255, 0.5);
-	border-radius: 1em;
-}
+/* body { */
+/* 	height: 100%; */
+/* 	display: grid; */
+/* 	grid-template-rows: auto 1fr auto; */
+/* } */
 
-main.changePw_background {
-	background-image: url(../images/milkyway.jpg);
-	background-size: cover;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
+/* .img { */
+/* 	opacity: 0.5; */
+/* 	position: relative; */
+/* 	width: 100%; */
+/* 	object-fit: cover; */
+/* } */
 
-.changePw-box {
-	width: 1200px;
-	height: 400px;
-	background-color: rgb(255, 255, 255, 0.5);
-	border-radius: 1em;
-	margin: ($spacer* 3) !important;
-}
+/* .img-view { */
+/* 	margin-top: 2rem; */
+/* 	margin-left: 2rem; */
+/* 	margin-bottom: 2rem; */
+/* 	background-image: url(../images/avatar.png); */
+/* 	background-size: cover; */
+/* 	display: inline-block; */
+/* } */
 
-/*
-.m-1 {
-  margin-left: ($spacer * .25) !important;
-}
-*/
-.changePwButtonRight {
-	padding-right: 16px;
-}
+/* .bold { */
+/* 	font-weight: bold; */
+/* } */
 
-main.index {
-	background-image: url(../images/milkyway.jpg);
-	background-size: cover;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-warp:
-}
+/* .avatar { */
+/* 	border-radius: 50%; */
+/* } */
 
-.index-text {
-	background-color: rgb(255, 255, 255, 0.6);
-}
+/* .jumbotron { */
+/* 	position: relative; */
+/* 	max-height: 350px; */
+/* 	overflow: hidden; */
+/* 	padding: 0; */
+/* } */
 
-.p-index {
-	padding-bottom: 2rem;
-	font-size: 1rem;
-	font-weight: 490;
-}
+/* .box { */
+/* 	position: absolute; */
+/* 	top: 50%; */
+/* 	transform: translate(0%, -50%); */
+/* } */
 
-.h1-index {
-	padding-top: 2rem;
-}
+/* @media only screen and (max-width: 400px) { */
+/* 	.display-4 { */
+/* 		font-size: 10vw; */
+/* 	} */
+/* 	.lead { */
+/* 		font-size: 5vw; */
+/* 	} */
+/* } */
 
-.avatar {
-	background-image: url(../images/avatar.png);
-	width: 60px;
-	height: 60px;
-	background-size: cover;
-	display: inline-block;
-}
+/* .display-4, .lead { */
+/* 	padding-left: 20px; */
+/* } */
 
-.btn-outline-secondary:hover {
-	color: #fff;
-	background-color: rgba(0, 0, 0, .5);
-	border-color: rgba(0, 0, 0, .5);
-	font-size: 1rem;
-}
+/* /* Settings für Navbar und Footer*/
+*
+/
+/* .navbar li { */
+/* 	list-style-type: none; */
+/* 	padding-left: 5vw; */
+/* } */
 
-.btn-group-sm>.btn, .btn-sm {
-	padding: .25rem .5rem;
-	font-size: 1rem;
-	line-height: 1.5;
-	border-radius: .2rem;
-}
+/* .bg-light { */
+/* 	background-color: orange !important; */
+/* 	padding: 0; */
+/* 	padding-left: 2rem; */
+/* 	padding-right: 0.5rem; */
+/* 	padding-top: 0.2rem; */
+/* 	padding-bottom: 0.2rem; */
+/* } */
 
-.btn-outline-secondary {
-	color: rgba(0, 0, 0, .7);
-	border-color: rgba(0, 0, 0, .7);
-}
+/* .copyright { */
+/* 	margin-bottom: 1rem; */
+/* } */
+
+/* .card { */
+/* 	margin: 2rem; */
+/* } */
+
+/* .container-edit { */
+/* 	margin: 2rem; */
+/* 	margin-left: 2rem; */
+/* } */
+
+/* /* Settings für Buttons*/
+
+ 
+
+*
+/
+/* .btn-danger { */
+/* 	margin-top: 2rem; */
+/* } */
+
+/* .btn-block { */
+/* 	display: block; */
+/* 	width: 100%; */
+/* } */
+
+/* .backbutton { */
+/* 	margin-top: 2rem; */
+/* } */
+
+/* .edit { */
+/* 	margin-top: 2rem; */
+/* } */
+
+/* ul { */
+/* 	list-style-type: none; */
+/* 	margin: 0; */
+/* 	padding: 0; */
+/* } */
+
+/* .card-title { */
+/* 	font-size: 36px; */
+/* } */
+
+/* .flex-container { */
+/* 	display: block; */
+/* 	align-items: center; */
+/* 	justify-content: center; */
+/* } */
+
+/* main.login_background { */
+/* 	background-image: url(../images/milkyway.jpg); */
+/* 	background-size: cover; */
+/* 	display: flex; */
+/* 	justify-content: center; */
+/* 	align-items: center; */
+/* } */
+
+/* .login-box { */
+/* 	width: 800px; */
+/* 	height: 300px; */
+/* 	background-color: rgb(255, 255, 255, 0.5); */
+/* 	border-radius: 1em; */
+/* } */
+
+/* main.changePw_background { */
+/* 	background-image: url(../images/milkyway.jpg); */
+/* 	background-size: cover; */
+/* 	display: flex; */
+/* 	justify-content: center; */
+/* 	align-items: center; */
+/* } */
+
+/* .changePw-box { */
+/* 	width: 1200px; */
+/* 	height: 400px; */
+/* 	background-color: rgb(255, 255, 255, 0.5); */
+/* 	border-radius: 1em; */
+/* 	margin: ($spacer* 3) !important; */
+/* } */
+
+/* /* */
+/* .m-1 { */
+/*   margin-left: ($spacer * .25) !important; */
+/* } */
+/* */
+
+ 
+
+*
+/
+/* .changePwButtonRight { */
+/* 	padding-right: 16px; */
+/* } */
+
+/* main.index { */
+/* 	background-image: url(../images/milkyway.jpg); */
+/* 	background-size: cover; */
+/* 	display: flex; */
+/* 	justify-content: center; */
+/* 	align-items: center; */
+/* 	flex-warp: */
+/* } */
+
+/* .index-text { */
+/* 	background-color: rgb(255, 255, 255, 0.6); */
+/* } */
+
+/* .p-index { */
+/* 	padding-bottom: 2rem; */
+/* 	font-size: 1rem; */
+/* 	font-weight: 490; */
+/* } */
+
+/* .h1-index { */
+/* 	padding-top: 2rem; */
+/* } */
+
+/* .avatar { */
+/* 	background-image: url(../images/avatar.png); */
+/* 	width: 60px; */
+/* 	height: 60px; */
+/* 	background-size: cover; */
+/* 	display: inline-block; */
+/* } */
+
+/* .btn-outline-secondary:hover { */
+/* 	color: #fff; */
+/* 	background-color: rgba(0, 0, 0, .5); */
+/* 	border-color: rgba(0, 0, 0, .5); */
+/* 	font-size: 1rem; */
+/* } */
+
+/* .btn-group-sm>.btn, .btn-sm { */
+/* 	padding: .25rem .5rem; */
+/* 	font-size: 1rem; */
+/* 	line-height: 1.5; */
+/* 	border-radius: .2rem; */
+/* } */
+
+/* .btn-outline-secondary { */
+/* 	color: rgba(0, 0, 0, .7); */
+/* 	border-color: rgba(0, 0, 0, .7); */
+/* } */
