Save before updating user search result

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -85,7 +85,7 @@
             <a href="/">SkillHub</a> Inc.
           </p>
           <p class="h6">
-            &copy All right Reversed.<a class="ml-2" href="https://www.telekom.com" target="_blank">Telekom AG</a>
+            &copy All right reversed.<a class="ml-2" href="https://www.telekom.com" target="_blank">Telekom AG</a>
           </p>
         </div>
       </div>
