--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -13,7 +13,13 @@
     <div class="container">
 
       <div class="row">
-        <div class="col col-12 col-lg-8 offset-lg-2">
+      
+        <div class="col col-6 col-lg-2">
+          <img class="img-view" th:unless="${userForm.image}" src="../images/avatar.png" width="100%"> <img
+            class="img-view" th:if="${userForm.image}" th:src="@{'/user/' + ${userForm.id} + '/image'}" width="100%">
+        </div>
+        
+        <div class="col col-12 col-lg-8">
           <div>
             <form enctype="multipart/form-data" method="post" th:action="@{/user/upsert}" th:object="${userForm}">
 
